maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:28: error: illegal start of simple expression
	}
        ^